# MazeCraft

./: .gitignore  MazeCraft.cabal  README.md  run.sh
dist-newstyle/cache/: compiler  config  elaborated-plan  improved-plan  plan.json  solver-plan  source-hashes  up-to-date
docs/: code.html
src/: DataStructures.hs  Main.hs  MazeGenerator.hs  MazeSolver.hs  UI.hs  WebServer.hs
src/API/: Types.hs
src/frontend/: app.js  index.html
